--- a/index.html
+++ b/index.html
@@ -5,16 +5,39 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Tab Title</title>
+        <title>cashew</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
 
         <!-- TYPE CODE BELOW -->
+        <div>
+            <h1>Welcome, <span>_________</span></h1>
+            <span>
+                <input type="text">
+                <button>Save</button>
+            </span>
+        </div>
+        <div>
+            <h1>Hello everyone, this is my summer blog!!</h1>
+            <h2><b>I love summer^^!</b></h2>
 
+            <p>I'm taking <b>Mandarin</b> this school year and I could able to say some simple phrases in <b>Mandarin:D!</b></p>
+            <p>This summer, I'm going to take <i>Math 10</i> for summer school.</p>
 
-        <script src="script.js"></script>
+            <img src="https://previews.123rf.com/images/bowie15/bowie151208/bowie15120800108/15112437-businessman-running.jpg" width="40%">
+            <script src="script.js"></script>
+            <h2><b>What I want to do:</b></h2>
+            <ol>
+                <li>Play badminton</li>
+                <li>Sleep-.-</li>
+            </ol>
+            <img src="https://c8.alamy.com/comp/DWT4P7/a-business-man-making-dance-poses-DWT4P7.jpg" width=" 15%">
+            <p><a href="https://www.youtube.com/live/q3xCKjLTL20?si=h1Z_siahsPGjMlIL"><i>Best sleeping music</i></a></p>
+        </div>
+
+        
     </body>
 
 </html>
