--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <body>
 
         <!-- TYPE CODE BELOW -->
-        <div>
-            <h1>Welcome, <span>_________</span></h1>
+        <div id="header">
+            <h1>Welcome, <span id="username">_________</span></h1>
             <span>
-                <input type="text">
-                <button>Save</button>
+                <input id="greeter" type="text">
+                <button id="save-name">Save</button>
             </span>
         </div>
-        <div>
+        <div id="intro">
             <h1>Hello everyone, this is my summer blog!!</h1>
             <h2><b>I love summer^^!</b></h2>
 
@@ -29,12 +29,12 @@
             <img src="https://previews.123rf.com/images/bowie15/bowie151208/bowie15120800108/15112437-businessman-running.jpg" width="40%">
             <script src="script.js"></script>
             <h2><b>What I want to do:</b></h2>
-            <ol>
-                <li>Play badminton</li>
+            <ol> 
+                <li class="kashew">Play badminton</li>
                 <li>Sleep-.-</li>
             </ol>
             <img src="https://c8.alamy.com/comp/DWT4P7/a-business-man-making-dance-poses-DWT4P7.jpg" width=" 15%">
-            <p><a href="https://www.youtube.com/live/q3xCKjLTL20?si=h1Z_siahsPGjMlIL"><i>Best sleeping music</i></a></p>
+            <p><a class="kashew" href="https://www.youtube.com/live/q3xCKjLTL20?si=h1Z_siahsPGjMlIL"><i>Best sleeping music</i></a></p>
         </div>
 
         
