--- a/about.html
+++ b/about.html
@@ -8,11 +8,41 @@
         <title>Tab Title</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
+    
     <body>
-
+            <nav class="navbar">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li class="current"><a href="about.html">About Me</a></li>
+                </ul>
+            </nav>
         <!-- TYPE CODE BELOW -->
 
+        <h1 class="title">About Me</h1>
+        <h2 class="title">Here is what you'll learn about me! click through to learn more!!!</h2>       
+        <div class="accordion">
+            <div class="accordion-item">
+                <button class="accordion-header">Fav Games</button>
+                <div class="accordion-content">
+                    <p>My favourite game is !!Devil May Cry Game series!!. They're so cool!!!!!!!!!!!!</p>
+
+                </div>
+            </div>
+            <div class="accordion-item">
+                <button class="accordion-header">Fav Songs</button>
+                <div class="accordion-content">
+                    <p>My favourite song is Cry For Me by Michita.  </p>
+
+                </div>
+            </div>
+            <div class="accordion-item">
+                <button class="accordion-header">Fav Movies</button>
+                <div class="accordion-content">
+                    <p>My favourite movie is Pirates of the Carribean beacause Jack Sparrow is so cool.</p>
+                </div>
+            </div>
+        </div> 
 
         <script src="script.js"></script>
     </body>
