added password button

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Tab Title</title>
+        <title>About me</title>
         <link rel="stylesheet" href="style.css">
     </head>
     
@@ -33,7 +33,8 @@
                 <button class="accordion-header">Fav Songs</button>
                 <div class="accordion-content">
                     <p>My favourite song is Cry For Me by Michita.  </p>
-
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2nXH9LBb5WlpNBH791Pov8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Kt1XplPBQBsDKQDa6TssB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
             <div class="accordion-item">
