--- a/blog.html
+++ b/blog.html
@@ -5,13 +5,128 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Tab Title</title>
+        <title>Blog</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
+            <nav class="navbar">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="current"><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                </ul>
+            </nav>
     <body>
 
         <!-- TYPE CODE BELOW -->
+        <h2 class="title">Blog</h2>
+
+        <div class="blog-entry">
+            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <div>
+                <h3>June 14 - coding is lowkey scaring me</h3>
+
+                <p>
+                    What is coding even about bro 
+                </p>
+
+                <p>
+                    designing is fun, i love figma (I WANNA GO HOME)
+                </p>
+
+                <p>
+                    Im scared for my future, cs as major is crazyy
+                </p>
+            </div>
+        </div>
+
+         <div class="blog-entry">
+            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <div>
+                <h3>June 14 - coding is lowkey scaring me</h3>
+
+                <p>
+                    What is coding even about bro 
+                </p>
+
+                <p>
+                    designing is fun, i love figma (I WANNA GO HOME)
+                </p>
+
+                <p>
+                    Im scared for my future, cs as major is crazyy
+                </p>
+            </div>
+        </div>
+
+        <div id="blog-entry">
+        </div>
+
+        <div id="enter-password">
+            <p><b>Enter password for free cashew',:)</b></p>
+            <span id="password-field">
+                <input type="password" id="password">
+                <button>Go</button>
+            </span>
+            <p id="message"></p>
+        </div>
+
+         <div class="blog-entry hidden">
+            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <div>
+                <h3>June 14 - coding is lowkey scaring me</h3>
+
+                <p>
+                    What is coding even about bro 
+                </p>
+
+                <p>
+                    designing is fun, i love figma (I WANNA GO HOME)
+                </p>
+
+                <p>
+                    Im scared for my future, cs as major is crazyy
+                </p>
+            </div>
+        </div>
+
+         <div class="blog-entry hidden">
+            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <div>
+                <h3>June 14 - coding is lowkey scaring me</h3>
+
+                <p>
+                    What is coding even about bro 
+                </p>
+
+                <p>
+                    designing is fun, i love figma (I WANNA GO HOME)
+                </p>
+
+                <p>
+                    Im scared for my future, cs as major is crazyy
+                </p>
+            </div>
+        </div>
+
+         <div class="blog-entry hidden">
+            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <div>
+                <h3>June 14 - coding is lowkey scaring me</h3>
+
+                <p>
+                    What is coding even about bro 
+                </p>
+
+                <p>
+                    designing is fun, i love figma (I WANNA GO HOME)
+                </p>
+
+                <p>
+                    Im scared for my future, cs as major is crazyy
+                </p>
+            </div>
+        </div>
+
 
 
         <script src="script.js"></script>
