edited password button

--- a/blog.html
+++ b/blog.html
@@ -40,20 +40,20 @@
         </div>
 
          <div class="blog-entry">
-            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <img src="https://thumbs.dreamstime.com/b/funny-man-big-fists-ready-fight-isolated-white-background-52211523.jpg">
             <div>
-                <h3>June 14 - coding is lowkey scaring me</h3>
+                <h3>June 21 - this day next month is my bd!!</h3>
 
                 <p>
-                    What is coding even about bro 
+                    Last day of coding!! 
                 </p>
 
                 <p>
-                    designing is fun, i love figma (I WANNA GO HOME)
+                    2 days left until summer>.<
                 </p>
 
                 <p>
-                    Im scared for my future, cs as major is crazyy
+                    BUT SUMMERSCHOOL IS COMING (GAHHHH D;)
                 </p>
             </div>
         </div>
@@ -65,45 +65,45 @@
             <p><b>Enter password for free cashew',:)</b></p>
             <span id="password-field">
                 <input type="password" id="password">
-                <button>Go</button>
+                <button onclick ="validatePass()">Go</button>
             </span>
             <p id="message"></p>
         </div>
 
          <div class="blog-entry hidden">
-            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <img src="https://i.pinimg.com/736x/da/2c/c8/da2cc83124841620104aa8c11fb025c9.jpg">
             <div>
-                <h3>June 14 - coding is lowkey scaring me</h3>
+                <h3>June 21?? - I love watermelon, no more cashew</h3>
 
                 <p>
-                    What is coding even about bro 
+                    My mom bought a super duper giant huge watermelon 
                 </p>
 
                 <p>
-                    designing is fun, i love figma (I WANNA GO HOME)
+                    ITS SO GOODD
                 </p>
 
                 <p>
-                    Im scared for my future, cs as major is crazyy
+                    Watermelon won the second place in my heart:)
                 </p>
             </div>
         </div>
 
          <div class="blog-entry hidden">
-            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <img src="https://media.istockphoto.com/id/896916940/photo/cat-cowboy-on-a-horse.jpg?s=612x612&w=0&k=20&c=vWP2EmHTDwgLnTXYyoBEmr3AD9R3dQcmiUbK-HNIbak=">
             <div>
-                <h3>June 14 - coding is lowkey scaring me</h3>
+                <h3>i dunno - Rah</h3>
 
                 <p>
-                    What is coding even about bro 
+                    I really want to go to Texas
                 </p>
 
                 <p>
-                    designing is fun, i love figma (I WANNA GO HOME)
+                    YEHAAAAAAAA!
                 </p>
 
                 <p>
-                    Im scared for my future, cs as major is crazyy
+                    rrrrrrrrrrrrr
                 </p>
             </div>
         </div>
