edited blog page

--- a/blog.html
+++ b/blog.html
@@ -109,20 +109,20 @@
         </div>
 
          <div class="blog-entry hidden">
-            <img src="https://thumbs.dreamstime.com/b/under-bosss-thumb-businessman-lying-floor-protecting-himself-giat-thumbs-up-265806907.jpg">
+            <img src="https://as1.ftcdn.net/jpg/01/33/77/68/1000_F_133776821_UGRrbM0AQazAsLyesl9dYqeYqTUQfnoz.jpg">
             <div>
-                <h3>June 14 - coding is lowkey scaring me</h3>
+                <h3>I HATE VSB - ts pmo</h3>
 
                 <p>
-                    What is coding even about bro 
+                    Why did they made us to go school for 2 more days
                 </p>
 
                 <p>
-                    designing is fun, i love figma (I WANNA GO HOME)
+                    AINT NO WAY IM COMING
                 </p>
 
                 <p>
-                    Im scared for my future, cs as major is crazyy
+                    LET ME FREEE
                 </p>
             </div>
         </div>
