edited about page

--- a/about.html
+++ b/about.html
@@ -26,13 +26,13 @@
                 <button class="accordion-header">Fav Games</button>
                 <div class="accordion-content">
                     <p>My favourite game is !!Devil May Cry Game series!!. They're so cool!!!!!!!!!!!!</p>
-                    
+
                 </div>
             </div>
             <div class="accordion-item">
                 <button class="accordion-header">Fav Songs</button>
                 <div class="accordion-content">
-                    <p>My favourite song is Cry For Me by Michita.  </p>
+                    <p>My favourite song is...  </p>
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2nXH9LBb5WlpNBH791Pov8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Kt1XplPBQBsDKQDa6TssB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
