edited about page

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
                 <button class="accordion-header">Fav Games</button>
                 <div class="accordion-content">
                     <p>My favourite game is !!Devil May Cry Game series!!. They're so cool!!!!!!!!!!!!</p>
+                     <img src="https://i.redd.it/h4cnattjq2271.jpg">
 
                 </div>
             </div>
@@ -41,6 +42,7 @@
                 <button class="accordion-header">Fav Movies</button>
                 <div class="accordion-content">
                     <p>My favourite movie is Pirates of the Carribean beacause Jack Sparrow is so cool.</p>
+                    <img src="https://static.euronews.com/articles/stories/08/33/33/78/1440x810_cmsv2_78d9c8e1-5a4c-5d32-9137-2eb118314e96-8333378.jpg" width="89%">
                 </div>
             </div>
         </div> 
