--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 <button class="accordion-header">Fav Games</button>
                 <div class="accordion-content">
                     <p>My favourite game is !!Devil May Cry Game series!!. They're so cool!!!!!!!!!!!!</p>
-                     <img src="https://i.redd.it/h4cnattjq2271.jpg">
+                     <img src="https://i.redd.it/h4cnattjq2271.jpg" width="60%">
 
                 </div>
             </div>
